tweaked sizes for social meadia

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 					<p>Kansas city, Kansas, 66102</p>
 				</div>
 				<div class="col-12">
-					<hr class="light">
+					<hr class="light-100">
 					<h5>Copyright© 2019</h5>
 				</div>
 
