added downnloable resume

--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
 				<a href="https://www.youtube.com/channel/UCDi9ti83chZLqydMfLpgLmA?view_as=subscriber"><i class="fab fa-youtube"></i></a>
 				<a href="https://www.linkedin.com/in/jorge-dominguez-1a691817b/"><i class="fab fa-linkedin"></i></a>
 				<a href="https://github.com/dominguez9421"><i class="fab fa-github"></i></a>
+				<a href="assets/resume1.pdf" alt="My resume" download="JD_Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
+				
+
 			</div>
 		</div>
 	</div>
