--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 				<img src="assets/images /code2.png">
 				<div class="carousel-caption">
 					<h1 class="display-2">Jorge Dominguez</h1>
+					<h3>Software Engineer</h3>
 				</div>
 			</div>
 		</div>
@@ -80,7 +81,11 @@
 	<div class="container-fluid">
 		<div class="row jumbotron">
 			<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-				<p class="lead">Lorem t iure distinctio sequi, quae enim saepe rerum dignissimos voluptatibus.</p>
+				<p class="lead">while(noSucess == True) {
+					tryAgain();
+				if(dead)
+						break;
+					}."</p>
 
 			</div>
 		</div>
@@ -96,36 +101,29 @@
 			<hr>
 			<div class="col-12">
 				<p class="lead">Hello! my name is, Jorge Dominguez
-					 I graduated with my Bachelor's in Information Systems from Donnelly College. I was
-					Born in Guadalajara Jalisco home of the tequila! and I was brought to the age of 13 to the United
-					States
-					and grew up here.<br><br>
-					It was a bit hard learning a new language but by my early years as a teenager I was able to pick up
-					the
-					langauge quickly and it took me about a year and a half to fully speak it. After graduatuion my goal
-					was
-					to become a system engineer however, I have always liked code and wanted to learn more about it and
-					the
-					KU Boot camp program seemed to put those skills to the test and I hope to become a software engineer
-					instead.
+					I graduated with my Bachelor's in Information Systems from Donnelly College. I was
+					Born in Guadalajara Jalisco but I was raised in Kansas.
+					<br><br>
+					I entered the University of Kansas Edwards campus coding bookcamp to improve my skills in the different fields of a web developer. 
+					my goal to always improve my learning in coding to provide the best services. If you would like to know more about me please feel free to contact me or download my resume on the contact section.  
 				</p>
 			</div>
 
 		</div>
 	</div>
 
-<hr class="my-4">
+	<hr class="my-4">
 	<!--- Three Column Section -->
-<figure>
-	<div class="fixed-wrap">
-		<div id="fixed"></div>
-	</div>
-</figure>
+	<figure>
+		<div class="fixed-wrap">
+			<div id="fixed"></div>
+		</div>
+	</figure>
 	<!--- Fixed background -->
 
 
 	<!--- Emoji Section -->
-	<button class="fun" data-toggle="collapse" data-target="#emoji">Take a peek at my begining works!</button>
+	<button class="fun" data-toggle="collapse" data-target="#emoji">Take a peek at my projects!</button>
 	<div id="emoji" class="collapse">
 		<div class="container-fluid">
 			<div class="row text-center">
@@ -162,8 +160,10 @@
 					<img class="card-img-top" src="assets/images /card1.png">
 					<div class="card-body">
 						<h4 class="card-title">Crystal Zelda</h4>
-						<p class="card-text">This crystal game will challenge your random skills do you have what it takes?</p>
-						<a href="https://dominguez9421.github.io/unit-4-game/" class="btn btn-outline-secondary">Play Game!</a>
+						<p class="card-text">This crystal game will challenge your random skills do you have what it
+							takes?</p>
+						<a href="https://dominguez9421.github.io/unit-4-game/" class="btn btn-outline-secondary">Play
+							Game!</a>
 					</div>
 				</div>
 			</div>
@@ -171,9 +171,11 @@
 				<div class="card">
 					<img class="card-img-top" src="assets/images /card2.png">
 					<div class="card-body">
-						<h4 class="card-title">Crystal Zelda</h4>
-						<p class="card-text">Prepare yourself for the weirdest test your ever taken! are you ready for this?</p>
-						<a href="https://dominguez9421.github.io/TriviaGame/" class="btn btn-outline-secondary">Take Quiz!</a>
+						<h4 class="card-title">Random Quiz!</h4>
+						<p class="card-text">Prepare yourself for the weirdest test your ever taken! are you ready for
+							this?</p>
+						<a href="https://dominguez9421.github.io/TriviaGame/" class="btn btn-outline-secondary">Take
+							Quiz!</a>
 					</div>
 				</div>
 			</div>
@@ -181,13 +183,16 @@
 				<div class="card">
 					<img class="card-img-top" src="assets/images /card3.png">
 					<div class="card-body">
-						<h4 class="card-title">Crystal Zelda</h4>
-						<p class="card-text">Ya'll know what time it is find the best gifts to kill time with this GIPHY database!</p>
-						<a href="https://dominguez9421.github.io/GIPHY-API/" class="btn btn-outline-secondary">Look for your favorite Gifs!</a>
+						<h4 class="card-title">Ghipy Mania!</h4>
+						<p class="card-text">Ya'll know what time it is find the best gifts to kill time with this GIPHY
+							database!</p>
+						<a href="https://dominguez9421.github.io/GIPHY-API/" class="btn btn-outline-secondary">Look for
+							your favorite Gifs!</a>
 					</div>
 				</div>
 			</div>
 		</div>
+		<hr class="my-4">
 	</div>
 
 
@@ -195,10 +200,10 @@
 	<div class="container-fluid padding">
 		<div class="row padding">
 			<div class="col-lg-6">
-				<h2>Connect with me</h2>
-				<p>dipisicing elit. Suscipit ea natus, ipsum numquam voluptates, </p>
-				<p>sit et corrupti ex maxime hic, consequuntur modi? Dolorem optio doloribus quo ullam beatae minima eligendi.</p> 
-				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero cumque, itaque nisi, natus ex, odion debitis odit minus.</p>
+				<h2>Contact me</h2>
+				<p>As a developer, networking is important in my life as having the right conncetions can lead you to a bigger project and enhance your skills by learning from others.   </p>
+				<p>Please feel free to follow me on my social platforms such as Github and Linkedin if you are an employeer, feel free to download my resume and contact me.  </p>
+				<p>As far as my Youtube channel, I will make blogs of what is like being a software engineer and hope to inspire others on taking a road this road of coding as it is beneficial and creates critical thinkers and problem solvers!.</p>
 				<br>
 				<div class="col-lg-6">
 					<img src="assets/images /me.jpg" class="img-fluid">
@@ -207,7 +212,7 @@
 		</div>
 		<hr class="my-4">
 	</div>
-	
+
 
 
 
@@ -215,15 +220,15 @@
 	<div class="container-fliuid padding">
 		<div class="row text-center padding">
 			<div class="col-12">
-				<h2>Connect</h2>
+				<h2>Follow my social media!</h2>
 			</div>
 			<div class="col-12 social padding">
-				<a href="https://www.youtube.com/channel/UCDi9ti83chZLqydMfLpgLmA?view_as=subscriber"><i class="fab fa-youtube"></i></a>
+				<a href="https://www.youtube.com/channel/UCDi9ti83chZLqydMfLpgLmA?view_as=subscriber"><i
+						class="fab fa-youtube"></i></a>
 				<a href="https://www.linkedin.com/in/jorge-dominguez-1a691817b/"><i class="fab fa-linkedin"></i></a>
 				<a href="https://github.com/dominguez9421"><i class="fab fa-github"></i></a>
-				<a href="assets/resume1.pdf" alt="My resume" download="JD_Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
-				
-
+				<a href="assets/resume1.pdf" alt="My resume" download="JD_Resume.pdf"><i class="fa fa-file"
+						aria-hidden="true"></i></a>
 			</div>
 		</div>
 	</div>
@@ -240,7 +245,7 @@
 					<h5>Personal Information</h5>
 					<hr class="light">
 					<p>913-xxx-xxx</p>
-					<p>jordom300@gmail.com</p>
+					<p>jordom300@gmail.com </p>
 					<p>100 street name</p>
 					<p>Kansas city, Kansas, 66102</p>
 				</div>
