--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>My improved portfolio</title>
 
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="assets/style.css" rel="stylesheet">
+	<link href="./assets/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +23,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="index.thml">
+			<a class="navbar-brand" href="index.html">
 				<h1>Welcome!</h1>
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -36,7 +38,7 @@
 						<a class="nav-link" href="#">About me</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Portfolio</a>
+						<a class="nav-link" href="#emoji">Portfolio</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Contact Me</a>
@@ -56,21 +58,21 @@
 		</ul>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="assets/images /code2.png">
+				<img src="./assets/images/code2.png">
 				<div class="carousel-caption">
 					<h1 class="display-2">Jorge Dominguez</h1>
-					<h3>Software Engineer</h3>
+					<h3>Web Developer</h3>
 				</div>
 			</div>
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item">
-				<img src="assets/images /code1.png">
+				<img src="./assets/images/code1.png">
 			</div>
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item">
-				<img src="assets/images /code3.png">
+				<img src="./assets/images/code3.png">
 			</div>
 		</div>
 
@@ -128,13 +130,13 @@
 		<div class="container-fluid">
 			<div class="row text-center">
 				<div class="col-sm-6 col-md-3">
-					<img class="gif" src="assets/images /gifs/zelda.gif">
+					<img class="gif" src="./assets/images/gifs/zelda.gif">
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<img class="gif" src="assets/images /gifs/quiz.gif">
+					<img class="gif" src="./assets/images/gifs/quiz.gif">
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<img class="gif" src="assets/images /gifs/giphy.gif">
+					<img class="gif" src="./assets/images/gifs/giphy.gif">
 				</div>
 			</div>
 		</div>
@@ -157,7 +159,7 @@
 		<div class="row padding">
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="assets/images /card1.png">
+					<img class="card-img-top" src="./assets/images/card1.png">
 					<div class="card-body">
 						<h4 class="card-title">Crystal Zelda</h4>
 						<p class="card-text">This crystal game will challenge your random skills do you have what it
@@ -169,7 +171,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="assets/images /card2.png">
+					<img class="card-img-top" src="./assets/images/card2.png">
 					<div class="card-body">
 						<h4 class="card-title">Random Quiz!</h4>
 						<p class="card-text">Prepare yourself for the weirdest test your ever taken! are you ready for
@@ -181,7 +183,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="assets/images /card3.png">
+					<img class="card-img-top" src="./assets/images/card3.png">
 					<div class="card-body">
 						<h4 class="card-title">Ghipy Mania!</h4>
 						<p class="card-text">Ya'll know what time it is find the best gifts to kill time with this GIPHY
@@ -206,7 +208,7 @@
 				<p>As far as my Youtube channel, I will make blogs of what is like being a software engineer and hope to inspire others on taking a road this road of coding as it is beneficial and creates critical thinkers and problem solvers!.</p>
 				<br>
 				<div class="col-lg-6">
-					<img src="assets/images /me.jpg" class="img-fluid">
+					<img src="./assets/images/me.jpg" class="img-fluid">
 				</div>
 			</div>
 		</div>
@@ -227,7 +229,7 @@
 						class="fab fa-youtube"></i></a>
 				<a href="https://www.linkedin.com/in/jorge-dominguez-1a691817b/"><i class="fab fa-linkedin"></i></a>
 				<a href="https://github.com/dominguez9421"><i class="fab fa-github"></i></a>
-				<a href="assets/resume1.pdf" alt="My resume" download="JD_Resume.pdf"><i class="fa fa-file"
+				<a href="./assets/resume1.pdf" alt="My resume" download="JD_Resume.pdf"><i class="fa fa-file"
 						aria-hidden="true"></i></a>
 			</div>
 		</div>
@@ -257,19 +259,6 @@
 			</div>
 		</div>
 	</footer>
-
-
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-		crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-		crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-		crossorigin="anonymous"></script>
 </body>
 
 </html>
