--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>My improved portfolio</title>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
@@ -20,10 +23,10 @@
 
 <body>
 
-	<!-- Navigation -->
-	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+	<!-- Navigation -->  <!-- sticky-top -->
+	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="index.html">
+			<a id="top" class="navbar-brand" href="index.html">
 				<h1>Welcome!</h1>
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -32,16 +35,16 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Home</a>
+						<a class="nav-link" href="#top">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">About me</a>
+						<a class="nav-link" href="#about-me">About me</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#emoji">Portfolio</a>
+						<a class="nav-link" href="#portfolio">Portfolio</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact Me</a>
+						<a class="nav-link" href="#contact">Contact Me</a>
 					</li>
 
 				</ul>
@@ -50,14 +53,14 @@
 	</nav>
 
 	<!--- Image Slider -->
-	<div id="slides" class="carousel slide" data-ride="carousel">
+	<!-- <div id="slides" class="carousel slide" data-ride="carousel">
 		<ul class="carousel-indicators">
 			<li data-target="#slides" data-slide-to="0" class="active"></li>
 			<li data-target="#slides" data-slide-to="1"></li>
 			<li data-target="#slides" data-slide-to="2"></li>
 		</ul>
 		<div class="carousel-inner">
-			<div class="carousel-item active">
+			<div class="carousel-item active" data-interval="1000">
 				<img src="./assets/images/code2.png">
 				<div class="carousel-caption">
 					<h1 class="display-2">Jorge Dominguez</h1>
@@ -65,18 +68,43 @@
 				</div>
 			</div>
 		</div>
-		<div class="carousel-inner">
+		<div class="carousel-inner" data-interval="3000">
 			<div class="carousel-item">
 				<img src="./assets/images/code1.png">
 			</div>
 		</div>
-		<div class="carousel-inner">
+		<div class="carousel-inner" data-interval="3000">
 			<div class="carousel-item">
 				<img src="./assets/images/code3.png">
 			</div>
 		</div>
 
-	</div>
+	</div> -->
+	<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+			  <div class="carousel-item active" data-interval="3000">
+					<div class="carousel-caption">
+							<h1 class="display-2">Jorge Dominguez</h1>
+							<h3>Web Developer</h3>
+						</div>
+				<img src="assets/images/code2.png" class="d-block w-100" alt="...">
+			  </div>
+			  <div class="carousel-item" data-interval="3000">
+				<img src="assets/images/code1.png" class="d-block w-100" alt="...">
+			  </div>
+			  <div class="carousel-item" data-interval="3000">
+				<img src="assets/images/code3.png" class="d-block w-100" alt="...">
+			  </div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Next</span>
+			</a>
+		  </div>
 
 
 	<!--- Jumbotron -->
@@ -95,7 +123,7 @@
 
 
 	<!--- Welcome Section -->
-	<div class="container-fluid padding">
+	<div id="about-me" class="container-fluid padding">
 		<div class="row welcome text-center">
 			<div class="col-12">
 				<h1 class="display-4">About me.</h1>
@@ -144,7 +172,7 @@
 
 
 	<!--- Meet the team -->
-	<div class="container-fluid padding">
+	<div id="portfolio" class="container-fluid padding">
 		<div class="row welcome text-center">
 			<div class="col-12">
 				<h1 class="display-4">Portfolio</h1>
@@ -199,7 +227,7 @@
 
 
 	<!--- Two Column Section -->
-	<div class="container-fluid padding">
+	<div id="contact" class="container-fluid padding">
 		<div class="row padding">
 			<div class="col-lg-6">
 				<h2>Contact me</h2>
@@ -260,6 +288,7 @@
 			</div>
 		</div>
 	</footer>
+	<script src="assets/js/animation.js"></script>
 </body>
 
 </html>
