--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
 					<img class="gif" src="./assets/images/gifs/zelda.gif">
 				</div>
 				<div class="col-sm-6 col-md-3">
+					<img class="gif" src="./assets/images/gifs/movie-this.gif">
+				</div>
+				<div class="col-sm-6 col-md-3">
 					<img class="gif" src="./assets/images/gifs/quiz.gif">
 				</div>
 				<div class="col-sm-6 col-md-3">
@@ -218,6 +221,16 @@
 							database!</p>
 						<a href="https://dominguez9421.github.io/GIPHY-API/" class="btn btn-outline-secondary">Look for
 							your favorite Gifs!</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
+					<img class="card-img-top" src="./assets/images/card4.png">
+					<div class="card-body">
+						<h4 class="card-title">Liri-BOT!</h4>
+						<p class="card-text">Meet LIRI she will answer questions to any of the movies, concerts, or music that you have for give it a go!</p>
+						<a href=" https://dominguez9421.github.io/liri-node-app/" class="btn btn-outline-secondary">Play with LIRI!</a>
 					</div>
 				</div>
 			</div>
