added new homework

--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
 				<div class="col-sm-6 col-md-3">
 					<img class="gif" src="./assets/images/gifs/giphy.gif">
 				</div>
+				<div class="col-sm-6 col-md-3">
+					<img class="gif" src="./assets/images/gifs/bamazon.gif">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -221,6 +224,16 @@
 							database!</p>
 						<a href="https://dominguez9421.github.io/GIPHY-API/" class="btn btn-outline-secondary">Look for
 							your favorite Gifs!</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
+					<img class="card-img-top" src="./assets/images/card5.png">
+					<div class="card-body">
+						<h4 class="card-title">Bamazon!</h4>
+						<p class="card-text">Looking for the next best thing to buy during the holidays try Bamazon!?</p>
+						<a href="https://dominguez9421.github.io/Bamazon/" class="btn btn-outline-secondary">Try this virtual shop!!</a>
 					</div>
 				</div>
 			</div>
