added new homework

--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
 				<div class="col-sm-6 col-md-3">
 					<img class="gif" src="./assets/images/gifs/bamazon.gif">
 				</div>
+				<div class="col-sm-6 col-md-3">
+					<img class="gif" src="./assets/images/gifs/friend finder .gif">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -239,6 +242,16 @@
 			</div>
 			<div class="col-md-4">
 				<div class="card">
+					<img class="card-img-top" src="./assets/images/card6.png">
+					<div class="card-body">
+						<h4 class="card-title">Friend finder!</h4>
+						<p class="card-text">Ever wanted to know who your best match is find out with friend finder!</p>
+						<a href=" https://friend-0.herokuapp.com" class="btn btn-outline-secondary">Find your best match!!</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
 					<img class="card-img-top" src="./assets/images/card4.png">
 					<div class="card-body">
 						<h4 class="card-title">Liri-BOT!</h4>
@@ -248,6 +261,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 		<hr class="my-4">
 	</div>
 
