--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
 					<img class="gif" src="./assets/images/gifs/bamazon.gif">
 				</div>
 				<div class="col-sm-6 col-md-3">
+					<img class="gif" src="./assets/images/gifs/burger.gif">
+				</div>
+				<div class="col-sm-6 col-md-3">
 					<img class="gif" src="./assets/images/gifs/friend finder .gif">
 				</div>
 			</div>
@@ -247,6 +250,17 @@
 						<h4 class="card-title">Friend finder!</h4>
 						<p class="card-text">Ever wanted to know who your best match is find out with friend finder!</p>
 						<a href=" https://friend-0.herokuapp.com" class="btn btn-outline-secondary">Find your best match!!</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
+					<img class="card-img-top" src="./assets/images/card7.png">
+					<div class="card-body">
+						<h4 class="card-title">Eat the Burger!</h4>
+						<p class="card-text">Want to create your own perfect burger try this and satisfy your virtual hunger!</p>
+						<a href="https://burger-300.herokuapp.com/burgers" class="btn btn-outline-secondary">Look for
+							Eat the burger!</a>
 					</div>
 				</div>
 			</div>
