improved projects area

--- a/index.html
+++ b/index.html
@@ -157,21 +157,21 @@
 	<div id="emoji" class="collapse">
 		<div class="container-fluid">
 			<div class="row text-center">
-				<div class="col-sm-6 col-md-3">
+				<!-- <div class="col-sm-6 col-md-3">
 					<img class="gif" src="./assets/images/gifs/zelda.gif">
-				</div>
+				</div> -->
 				<div class="col-sm-6 col-md-3">
 					<img class="gif" src="./assets/images/gifs/movie-this.gif">
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<img class="gif" src="./assets/images/gifs/quiz.gif">
+					<img class="gif" src="./assets/images/card8.png">
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<img class="gif" src="./assets/images/gifs/giphy.gif">
+					<img class="gif" src="./assets/images/card9.png">
 				</div>
-				<div class="col-sm-6 col-md-3">
+				<!-- <div class="col-sm-6 col-md-3">
 					<img class="gif" src="./assets/images/gifs/bamazon.gif">
-				</div>
+				</div> -->
 				<div class="col-sm-6 col-md-3">
 					<img class="gif" src="./assets/images/gifs/burger.gif">
 				</div>
@@ -199,47 +199,22 @@
 		<div class="row padding">
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="./assets/images/card1.png">
+					<img class="card-img-top" src="./assets/images/card8.png">
 					<div class="card-body">
-						<h4 class="card-title">Crystal Zelda</h4>
-						<p class="card-text">This crystal game will challenge your random skills do you have what it
-							takes?</p>
-						<a href="https://dominguez9421.github.io/unit-4-game/" class="btn btn-outline-secondary">Play
-							Game!</a>
+						<h4 class="card-title">Anime Search!</h4>
+						<p class="card-text">If you are looking for your favorite anime or TV show! You came to the right place look around!</p>
+						<a href="https://umbachg.github.io/project-1/" class="btn btn-outline-secondary">Look for
+							your favorite Anime and TV shows!</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="./assets/images/card2.png">
+					<img class="card-img-top" src="./assets/images/card9.png">
 					<div class="card-body">
-						<h4 class="card-title">Random Quiz!</h4>
-						<p class="card-text">Prepare yourself for the weirdest test your ever taken! are you ready for
-							this?</p>
-						<a href="https://dominguez9421.github.io/TriviaGame/" class="btn btn-outline-secondary">Take
-							Quiz!</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="card">
-					<img class="card-img-top" src="./assets/images/card3.png">
-					<div class="card-body">
-						<h4 class="card-title">Ghipy Mania!</h4>
-						<p class="card-text">Ya'll know what time it is find the best gifts to kill time with this GIPHY
-							database!</p>
-						<a href="https://dominguez9421.github.io/GIPHY-API/" class="btn btn-outline-secondary">Look for
-							your favorite Gifs!</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="card">
-					<img class="card-img-top" src="./assets/images/card5.png">
-					<div class="card-body">
-						<h4 class="card-title">Bamazon!</h4>
-						<p class="card-text">Looking for the next best thing to buy during the holidays try Bamazon!?</p>
-						<a href="https://dominguez9421.github.io/Bamazon/" class="btn btn-outline-secondary">Try this virtual shop!!</a>
+						<h4 class="card-title">Freedom Bank!</h4>
+						<p class="card-text">Looking for a new try out a new bank check out Freedom Bank where trust is earned.</p>
+						<a href="https://freedombankproject.herokuapp.com/" class="btn btn-outline-secondary">Try Freedom bank!!</a>
 					</div>
 				</div>
 			</div>
@@ -285,9 +260,13 @@
 		<div class="row padding">
 			<div class="col-lg-6">
 				<h2>Contact me</h2>
-				<p>As a developer, networking is important in my life as having the right conncetions can lead you to a bigger project and enhance your skills by learning from others.   </p>
-				<p>Please feel free to follow me on my social platforms such as Github and Linkedin if you are an employeer, feel free to download my resume and contact me.  </p>
-				<p>As far as my Youtube channel, I will make blogs of what is like being a software engineer and hope to inspire others on taking a road this road of coding as it is beneficial and creates critical thinkers and problem solvers!.</p>
+				<p>As a developer, networking is important in my life, having the right connections can lead me to a bigger project and I
+				can enhance my skills by learning from others.  </p>
+				<p>Scroll down below and please feel free to follow me on my social platforms such as GitHub and LinkedIn if you are an employer, feel free to
+				download my resume and contact me.</p>
+				<p>As far as my YouTube channel, I will make blogs of what is like being a software engineer and hope to inspire others on
+				taking a road this road of coding as it is beneficial and creates critical thinkers and problem solvers!</p>
+				
 		
 				<br>
 			</div>
@@ -332,7 +311,7 @@
 					<p>913-xxx-xxx</p>
 					<p>jordom300@gmail.com </p>
 					<p>100 street name</p>
-					<p>Kansas city, Kansas, 66102</p>
+					<p>Kansas city, Overland Park, 66214</p>
 				</div>
 				<div class="col-12">
 					<hr class="light-100">
